src/main/java/com/soundcheck/generated/RaagParser.java
// Generated from C:/Users/Aniruddha Sarkar/Documents/github/SoundCheck/src/main/resources\Raag.g4 by ANTLR 4.8
package com.soundcheck.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RaagParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		VARNAME=39, FLOAT=40, DIGIT=41, IGNORE=42;
	public static final int
		RULE_syntax = 0, RULE_declarations = 1, RULE_optionalDeclarations = 2, 
		RULE_outFileName = 3, RULE_start = 4, RULE_baseFreq = 5, RULE_beatsPerCycle = 6, 
		RULE_numCycles = 7, RULE_low = 8, RULE_high = 9, RULE_msec = 10, RULE_volume = 11, 
		RULE_playFileName = 12, RULE_wavFileName = 13, RULE_unit = 14, RULE_rule = 15, 
		RULE_derivation = 16, RULE_expression = 17, RULE_combinator = 18, RULE_sequence = 19, 
		RULE_option = 20, RULE_schemeCall = 21, RULE_schemeNameCalled = 22, RULE_variable = 23, 
		RULE_probability = 24, RULE_schemeBlock = 25, RULE_octave = 26, RULE_octaveOption = 27, 
		RULE_ascent = 28, RULE_descent = 29, RULE_arohan = 30, RULE_avarohan = 31, 
		RULE_schemes = 32, RULE_scheme = 33, RULE_schemeName = 34, RULE_schemeDerivation = 35, 
		RULE_schemeExpression = 36, RULE_schemeProbability = 37, RULE_schemeOption = 38, 
		RULE_combinatorScheme = 39, RULE_simpleScheme = 40, RULE_swar = 41;
	private static String[] makeRuleNames() {
		return new String[] {
			"syntax", "declarations", "optionalDeclarations", "outFileName", "start", 
			"baseFreq", "beatsPerCycle", "numCycles", "low", "high", "msec", "volume", 
			"playFileName", "wavFileName", "unit", "rule", "derivation", "expression", 
			"combinator", "sequence", "option", "schemeCall", "schemeNameCalled", 
			"variable", "probability", "schemeBlock", "octave", "octaveOption", "ascent", 
			"descent", "arohan", "avarohan", "schemes", "scheme", "schemeName", "schemeDerivation", 
			"schemeExpression", "schemeProbability", "schemeOption", "combinatorScheme", 
			"simpleScheme", "swar"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'beatsPerCycle:'", "';'", "'numCycles:'", "'Range:'", "'-'", "'OutFile:'", 
			"'Start:'", "'base:'", "'msec:'", "'volume:'", "'playFile:'", "'wavFile:'", 
			"'->'", "'|'", "','", "'('", "')'", "'palta'", "'{'", "'}'", "'sargam'", 
			"'arohan'", "':'", "'avarohan'", "'Sa'", "'Re'", "'re'", "'Ga'", "'ga'", 
			"'Ma'", "'ma'", "'Pa'", "'Dha'", "'dha'", "'Ni'", "'ni'", "'*'", "'_'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "VARNAME", "FLOAT", "DIGIT", "IGNORE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Raag.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RaagParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SyntaxContext extends ParserRuleContext {
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public List<UnitContext> unit() {
			return getRuleContexts(UnitContext.class);
		}
		public UnitContext unit(int i) {
			return getRuleContext(UnitContext.class,i);
		}
		public SyntaxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_syntax; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).enterSyntax(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).exitSyntax(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RaagVisitor ) return ((RaagVisitor<? extends T>)visitor).visitSyntax(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SyntaxContext syntax() throws RecognitionException {
		SyntaxContext _localctx = new SyntaxContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_syntax);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			declarations();
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__17 || _la==VARNAME) {
				{
				{
				setState(85);
				unit();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public BeatsPerCycleContext beatsPerCycle() {
			return getRuleContext(BeatsPerCycleContext.class,0);
		}
		public NumCyclesContext numCycles() {
			return getRuleContext(NumCyclesContext.class,0);
		}
		public LowContext low() {
			return getRuleContext(LowContext.class,0);
		}
		public HighContext high() {
			return getRuleContext(HighContext.class,0);
		}
		public OptionalDeclarationsContext optionalDeclarations() {
			return getRuleContext(OptionalDeclarationsContext.class,0);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).exitDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RaagVisitor ) return ((RaagVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(T__0);
			setState(92);
			beatsPerCycle();
			setState(93);
			match(T__1);
			setState(94);
			match(T__2);
			setState(95);
			numCycles();
			setState(96);
			match(T__1);
			setState(97);
			match(T__3);
			setState(98);
			low();
			setState(99);
			match(T__4);
			setState(100);
			high();
			setState(101);
			match(T__1);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11))) != 0)) {
				{
				setState(102);
				optionalDeclarations();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptionalDeclarationsContext extends ParserRuleContext {
		public OutFileNameContext outFileName() {
			return getRuleContext(OutFileNameContext.class,0);
		}
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public BaseFreqContext baseFreq() {
			return getRuleContext(BaseFreqContext.class,0);
		}
		public MsecContext msec() {
			return getRuleContext(MsecContext.class,0);
		}
		public VolumeContext volume() {
			return getRuleContext(VolumeContext.class,0);
		}
		public PlayFileNameContext playFileName() {
			return getRuleContext(PlayFileNameContext.class,0);
		}
		public WavFileNameContext wavFileName() {
			return getRuleContext(WavFileNameContext.class,0);
		}
		public OptionalDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optionalDeclarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).enterOptionalDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).exitOptionalDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RaagVisitor ) return ((RaagVisitor<? extends T>)visitor).visitOptionalDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptionalDeclarationsContext optionalDeclarations() throws RecognitionException {
		OptionalDeclarationsContext _localctx = new OptionalDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_optionalDeclarations);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				match(T__5);
				setState(106);
				outFileName();
				setState(107);
				match(T__1);
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				match(T__6);
				setState(110);
				start();
				setState(111);
				match(T__1);
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				match(T__7);
				setState(114);
				baseFreq();
				setState(115);
				match(T__1);
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 4);
				{
				setState(117);
				match(T__8);
				setState(118);
				msec();
				setState(119);
				match(T__1);
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 5);
				{
				setState(121);
				match(T__9);
				setState(122);
				volume();
				setState(123);
				match(T__1);
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 6);
				{
				setState(125);
				match(T__10);
				setState(126);
				playFileName();
				setState(127);
				match(T__1);
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 7);
				{
				setState(129);
				match(T__11);
				setState(130);
				wavFileName();
				setState(131);
				match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutFileNameContext extends ParserRuleContext {
		public TerminalNode VARNAME() { return getToken(RaagParser.VARNAME, 0); }
		public OutFileNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outFileName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).enterOutFileName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).exitOutFileName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RaagVisitor ) return ((RaagVisitor<? extends T>)visitor).visitOutFileName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OutFileNameContext outFileName() throws RecognitionException {
		OutFileNameContext _localctx = new OutFileNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_outFileName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(VARNAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public TerminalNode VARNAME() { return getToken(RaagParser.VARNAME, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RaagVisitor ) return ((RaagVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(VARNAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BaseFreqContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(RaagParser.FLOAT, 0); }
		public BaseFreqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_baseFreq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).enterBaseFreq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).exitBaseFreq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RaagVisitor ) return ((RaagVisitor<? extends T>)visitor).visitBaseFreq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BaseFreqContext baseFreq() throws RecognitionException {
		BaseFreqContext _localctx = new BaseFreqContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_baseFreq);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(FLOAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BeatsPerCycleContext extends ParserRuleContext {
		public List<TerminalNode> DIGIT() { return getTokens(RaagParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(RaagParser.DIGIT, i);
		}
		public BeatsPerCycleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beatsPerCycle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).enterBeatsPerCycle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).exitBeatsPerCycle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RaagVisitor ) return ((RaagVisitor<? extends T>)visitor).visitBeatsPerCycle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BeatsPerCycleContext beatsPerCycle() throws RecognitionException {
		BeatsPerCycleContext _localctx = new BeatsPerCycleContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_beatsPerCycle);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(141);
				match(DIGIT);
				}
				}
				setState(144); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DIGIT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumCyclesContext extends ParserRuleContext {
		public List<TerminalNode> DIGIT() { return getTokens(RaagParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(RaagParser.DIGIT, i);
		}
		public NumCyclesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numCycles; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).enterNumCycles(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).exitNumCycles(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RaagVisitor ) return ((RaagVisitor<? extends T>)visitor).visitNumCycles(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumCyclesContext numCycles() throws RecognitionException {
		NumCyclesContext _localctx = new NumCyclesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_numCycles);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(146);
				match(DIGIT);
				}
				}
				setState(149); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DIGIT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LowContext extends ParserRuleContext {
		public TerminalNode VARNAME() { return getToken(RaagParser.VARNAME, 0); }
		public LowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_low; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).enterLow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).exitLow(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RaagVisitor ) return ((RaagVisitor<? extends T>)visitor).visitLow(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LowContext low() throws RecognitionException {
		LowContext _localctx = new LowContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_low);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			match(VARNAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HighContext extends ParserRuleContext {
		public TerminalNode VARNAME() { return getToken(RaagParser.VARNAME, 0); }
		public HighContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_high; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).enterHigh(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).exitHigh(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RaagVisitor ) return ((RaagVisitor<? extends T>)visitor).visitHigh(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HighContext high() throws RecognitionException {
		HighContext _localctx = new HighContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_high);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(VARNAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MsecContext extends ParserRuleContext {
		public List<TerminalNode> DIGIT() { return getTokens(RaagParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(RaagParser.DIGIT, i);
		}
		public MsecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_msec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).enterMsec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).exitMsec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RaagVisitor ) return ((RaagVisitor<? extends T>)visitor).visitMsec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MsecContext msec() throws RecognitionException {
		MsecContext _localctx = new MsecContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_msec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(155);
				match(DIGIT);
				}
				}
				setState(158); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DIGIT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VolumeContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(RaagParser.FLOAT, 0); }
		public VolumeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_volume; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).enterVolume(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).exitVolume(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RaagVisitor ) return ((RaagVisitor<? extends T>)visitor).visitVolume(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VolumeContext volume() throws RecognitionException {
		VolumeContext _localctx = new VolumeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_volume);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(FLOAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PlayFileNameContext extends ParserRuleContext {
		public TerminalNode VARNAME() { return getToken(RaagParser.VARNAME, 0); }
		public PlayFileNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_playFileName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).enterPlayFileName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).exitPlayFileName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RaagVisitor ) return ((RaagVisitor<? extends T>)visitor).visitPlayFileName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlayFileNameContext playFileName() throws RecognitionException {
		PlayFileNameContext _localctx = new PlayFileNameContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_playFileName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(VARNAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WavFileNameContext extends ParserRuleContext {
		public TerminalNode VARNAME() { return getToken(RaagParser.VARNAME, 0); }
		public WavFileNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wavFileName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).enterWavFileName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).exitWavFileName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RaagVisitor ) return ((RaagVisitor<? extends T>)visitor).visitWavFileName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WavFileNameContext wavFileName() throws RecognitionException {
		WavFileNameContext _localctx = new WavFileNameContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_wavFileName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(VARNAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnitContext extends ParserRuleContext {
		public RuleContext rule() {
			return getRuleContext(RuleContext.class,0);
		}
		public SchemeBlockContext schemeBlock() {
			return getRuleContext(SchemeBlockContext.class,0);
		}
		public UnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).enterUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RaagListener ) ((RaagListener)listener).exitUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof RaagVisitor ) return ((RaagVisitor<? extends T>)visitor).visitUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnitContext unit() throws RecognitionException {
		UnitContext _localctx = new UnitContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_unit);
		try {
			setState(168);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VARNAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(166);
				rule();
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 2);
				{
				setState(167);
				schemeBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
